--- a/package.json
+++ b/package.json
@@ -1,6 +1,27 @@
 {
   "dependencies": {
     "@discordjs/rest": "^1.0.0",
-    "discord.js": "^14.0.3"
-  }
+    "discord.js": "^14.0.3",
+    "node-open-geocoder": "^4.0.1",
+    "staticmaps": "^1.9.1"
+  },
+  "name": "velibot",
+  "description": "Discord bot checking Vélib stations availability.",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "deploy": "node deploy-commands.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/totocptbgn/Velibot.git"
+  },
+  "keywords": [],
+  "author": "Thomas Copt-Bignon",
+  "license": "GPL-3.0-only",
+  "bugs": {
+    "url": "https://github.com/totocptbgn/Velibot/issues"
+  },
+  "homepage": "https://github.com/totocptbgn/Velibot#readme"
 }
